complete style commited

--- a/story/style.css
+++ b/story/style.css
@@ -27,6 +27,12 @@ body{
     /* background-color: red; */
     border-bottom: 1px solid rgb(165, 165, 169);
     padding: 20px;
+    white-space: nowrap;
+    overflow: auto;
+    overflow-y: hidden;
+}
+.stories-header::-webkit-scrollbar{
+    display: none;
 }
 
 .story{
@@ -34,6 +40,7 @@ body{
     height: 80px;
     /* background-color: blue; */
     border: 2px solid red;
+    display: inline-block;
     border-radius: 50%;
     overflow: hidden;
 }
